# Smart-File-organiser

./: Cargo.toml  LICENSE  README.md  config.toml  create_test_files.bat  create_test_files.sh  index.html  main.rs  organizer_log.txt  script.js  smart-organizer-linux-aarch64  smart-organizer-linux-x86_64  styles.css
src/: lib.rs  main.rs
tests/: integration.rs
