[package]
name = "smart-organizer"
version = "1.1.0"
edition = "2021"
description = "Sort messy directories into category folders by file extension."

[dependencies]
chrono  = "0.4"
clap    = { version = "4.5", features = ["derive"] }
serde   = { version = "1.0", features = ["derive"] }
toml    = "0.8"
colored = "2.1"

[dev-dependencies]
toml    = "0.8"
chrono  = "0.4"